fixed contact form width on IE.

--- a/public_html/v6/css/csselements.css
+++ b/public_html/v6/css/csselements.css
@@ -161,8 +161,6 @@
     }
 
     .contact-methods {
-        display: -webkit-flex;
-        display: flex;
         max-width: 1000px;
         margin: 0 auto;
         justify-content: space-between;
